[package]
name = "toy_arena"
authors = ["toyboot4e"]
version = "0.2.0"
edition = "2018"
description = "Extensible generational arena for various uses"
license = "MIT"
exclude = ["devlog.adoc"]

[dependencies]
derivative = "2.2.0"
igri = { path = "../igri/igri", version = "0.1.0", optional = true }

